@@ -11,8 +11,8 @@ RUN mvn -f /home/app/pom.xml clean package
 
 
 FROM openjdk:8-jre-slim
-ARG OPTIONS="-XX:InitialRAMPercentage=50.0 -XX:MaxRAMPercentage=80.0"
+ARG OPTIONS="-XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Xmx256m -Xss512k -XX:MetaspaceSize=100m -jar /apps/app.jar"
 ENV OPT=$OPTIONS
 COPY --from=build /home/app/target/simpleapi-1.0.jar /usr/local/lib/simpleapi-1.0.jar
 EXPOSE 8080
-ENTRYPOINT java ${OPT} -jar /usr/local/lib/simpleapi-1.0.jar
+ENTRYPOINT ["java ${OPT}", "-jar","/usr/local/lib/simpleapi-1.0.jar"]
